src/styles/components/prose.css
.prose {
  h2 {
    margin-block-start: theme(spacing.16);
    font-weight: bold;
    font-size: theme(fontSize.2xl);
    line-height: theme(lineHeight.tight);
    text-wrap: pretty;
    word-break: auto-phrase;
  }

  h3 {
    margin-block-start: theme(spacing.12);
    font-weight: bold;
    font-size: theme(fontSize.lg);
    line-height: theme(lineHeight.tight);
    text-wrap: pretty;
    word-break: auto-phrase;
  }

  p {
    margin-block-start: theme(spacing.8);
    hanging-punctuation: allow-end;
  }

  :is(h2, h3) + p {
    margin-block-start: theme(spacing.4);
  }

  /* Remove the unnecessary paragraph elements rendered by MDX. */
  figure > p:has(> img),
  figcaption > p {
    display: contents;
  }

  hr {
    margin-block: theme(spacing.rect);
    border-block-start-width: theme(borderWidth.4);
    inline-size: theme(spacing.32);
  }

  pre {
    margin-inline: calc((100cqi - 100%) / 2 * -1);
    margin-block: theme(spacing.rect);
    padding: theme(spacing.5) calc((100cqi - 100%) / 2);
    font-size: theme(fontSize.sm);
    line-height: theme(lineHeight.tight);

    /* Apply when the container reaches `inline-size: 42rem`. */
    /* container size = 42rem / (100% - 2 * 5%) */
    @container root (inline-size >= 46.666rem) {
      margin-right: calc((100cqi - var(--body-padding-left) - 100%) * -1);
      margin-left: calc(var(--body-padding-left) * -1);
      padding-right: var(--body-padding-right);
      padding-left: var(--body-padding-left);
    }
  }

  figure pre {
    margin-block-end: 0;
  }

  blockquote:not(.twitter-tweet) {
    position: relative;
    margin-block-start: theme(spacing.8);
    padding-inline-start: 2rem;
  }

  blockquote:not(.twitter-tweet)::before {
    position: absolute;
    inset-block: calc((1rlh - 1rem) / 2);
    inset-inline-start: 0;
    border-inline-start-width: theme(borderWidth.4);
    content: '';
  }

  :is(ol, ul) {
    margin-block-start: theme(spacing.8);
    padding-inline-start: 2rem;
    hanging-punctuation: allow-end;
    list-style-type: revert;
  }

  li {
    margin-block-start: theme(spacing.1);
  }

  figure {
    margin-block: theme(spacing.rect);
  }

  figcaption {
    margin-block-start: theme(spacing.3);
    hanging-punctuation: allow-end;
    font-size: theme(fontSize.sm);
  }

  /* The `quotes` property does not work correctly in Safari */
  /* https://bugs.webkit.org/show_bug.cgi?id=260425 */
  code::before,
  code::after {
    content: '`';
  }

  pre > code::before,
  pre > code::after {
    content: normal;
  }

  img {
    border: 1px solid theme(borderColor.DEFAULT);
  }

  table {
    display: block;
    margin-block: theme(spacing.rect);
    border-spacing: 0;
    max-inline-size: 100%;
    overflow-x: auto;
  }

  td {
    vertical-align: top;
    border-block-end-width: thin;
    border-block-end-style: solid;
    padding: theme(spacing.1) theme(spacing.3);
    white-space: pre;
  }

  th {
    vertical-align: top;
    border-block-end-width: thin;
    border-block-end-style: solid;
    background-color: theme(backgroundColor.dynamic.inset);
    padding: theme(spacing.1) theme(spacing.3);
    text-align: inherit;
    white-space: pre;
  }

  details {
    margin-block-start: theme(spacing.8);
  }

  :is(astro-embed-tweet, lite-youtube, .codepen, .cp_embed_wrapper) {
    margin-block: theme(spacing.rect);
  }
}

